--- a/html/About.html
+++ b/html/About.html
@@ -44,58 +44,9 @@
         <section>
             <div class="container">
                 <div class="head">
-                    <p class="head__title"> LA TEAM </p>
+                    <p class="head__title"> A PROPOS </p>
                 </div>
-                <div class="container team-box">
-                    <div class="box-collab">
-                        <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/Philippe.png">
-                        </div>
-                        <div class="photo-text">
-                            <p class="name"> Philippe </p>
-                            <p class="job"> CEO </p>
-                            <p class="presentation-txt"> C'est moi le patron. <br> 
-                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
-                            </p>
-                        </div>
-                    </div>
-                    <div class="box-collab">
-                        <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/pp.png">
-                        </div>
-                        <div class="photo-text">
-                            <p class="name"> Angélique </p>
-                            <p class="job"> Alternante en Développement Web </p>
-                            <p class="presentation-txt">" Prout <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
-                            </p>
-                        </div>
-                    </div>
-                    <div class="box-collab">
-                        <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/Laetiti.png">
-                        </div>
-                        <div class="photo-text">
-                            <p class="name"> LAETITIA </p>
-                            <p class="job"> Chef de projet digital </p>
-                            <p class="presentation-txt"> Vive les chatons <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
-                            </p>
-                        </div>
-                    </div>
-                    <div class="box-collab">
-                        <div class="cadre-photo">
-                            <img  class="photo-team" src="/images/unnamed.jpg">
-                        </div>
-                        <div class="photo-text">
-                            <p class="name"> ALEX </p>
-                            <p class="job"> Pièce rapportée  </p>
-                            <p class="presentation-txt"> Vive la soupe aux choux à Tokyo <br> 
-                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ""
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
 
             </div>
@@ -105,7 +56,7 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
+                    <h4 class="footer__title footer__title--adress">Vault Tec</h4>
 
                     <p> 17 rue Coustou <br>
                         59000 Lille<br>
@@ -117,11 +68,13 @@
                         <li> 06.06.06.06.06 </li>
                         <li> contact@vaulttec.fr</li>
                     </ul>
-                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                    <button type="button" class="form-btn footer__btn">Contactez-nous</button>
                 </div>
 
                 <div class="footer__box">
-                    <a><i class="fab fa-linkedin rs--light"></i></a>
+                    <h4 class="footer__title footer__title--socialmedia"> Retrouvez nous sur Linkedin </h4>
+
+                    <div class="background-rs"><a href="#"><i class="fab fa-linkedin rs--light"></i></a></div>
                 </div>
             </div>
         </div>
