--- a/html/Home.html
+++ b/html/Home.html
@@ -47,8 +47,10 @@
                 <p class="section__title"> Nos Services </p>
                 <div class="container section__container-box">
                     <div class="encart__service-box">
+
                         <i class="encart__icon-service-box fas fa-shield-alt"></i>
                         <h2 class="encart__title-box">Service 1</h2>
+
                     </div>
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-cogs"></i>
@@ -70,14 +72,14 @@
                 <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
                 <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
             </div>
-            <div class="btn-temoignage"><a href="#">  Retrouvez les témoignages de nos partenaires</a></div>
+            <div class="btn-temoignage"><a href="#"> Retrouvez les témoignages de nos partenaires</a></div>
         </section>
     </main>
     <footer>
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
+                    <h4 class="footer__title footer__title--adress">Vault Tec</h4>
 
                     <p> 17 rue Coustou <br>
                         59000 Lille<br>
@@ -89,11 +91,13 @@
                         <li> 06.06.06.06.06 </li>
                         <li> contact@vaulttec.fr</li>
                     </ul>
-                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                    <button type="button" class="form-btn footer__btn">Contactez-nous</button>
                 </div>
 
                 <div class="footer__box">
-                    <a><i class="fab fa-linkedin rs--light"></i></a>
+                    <h4 class="footer__title footer__title--socialmedia"> Retrouvez nous sur Linkedin </h4>
+
+                    <div class="background-rs"><a href="#"><i class="fab fa-linkedin rs--light"></i></a></div>
                 </div>
             </div>
         </div>
