--- a/html/Team.html
+++ b/html/Team.html
@@ -109,7 +109,7 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
+                    <h4 class="footer__title footer__title--adress">Vault Tec</h4>
 
                     <p> 17 rue Coustou <br>
                         59000 Lille<br>
@@ -121,11 +121,13 @@
                         <li> 06.06.06.06.06 </li>
                         <li> contact@vaulttec.fr</li>
                     </ul>
-                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                    <button type="button" class="form-btn footer__btn">Contactez-nous</button>
                 </div>
 
                 <div class="footer__box">
-                    <a><i class="fab fa-linkedin rs--light"></i></a>
+                    <h4 class="footer__title footer__title--socialmedia"> Retrouvez nous sur Linkedin </h4>
+
+                    <div class="background-rs"><a href="#"><i class="fab fa-linkedin rs--light"></i></a></div>
                 </div>
             </div>
         </div>
