--- a/html/Services.html
+++ b/html/Services.html
@@ -46,7 +46,7 @@
                 <div class="head">
                     <p class="head__title"> Nos Services </p>
                 </div>
-                <div class="box-services">
+                <div id="service1" class="box-services">
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-shield-alt"></i>
                         <h2 class="encart__title-box"> Service 1</h2>
@@ -57,7 +57,7 @@
                         survived not only five centuries, but also the leap into electronic typesetting, remaining
                         essentially unchanged. </div>
                 </div>
-                <div class="box-services">
+                <div id="service2" class="box-services">
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-shield-alt"></i>
                         <h2 class="encart__title-box"> Service 1</h2>
@@ -66,9 +66,9 @@
                         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                         unknown printer took a galley of type and scrambled it to make a type specimen book. It has
                         survived not only five centuries, but also the leap into electronic typesetting, remaining
-                        essentially unchanged.  </div>
+                        essentially unchanged. </div>
                 </div>
-                <div class="box-services">
+                <div id="service3" class="box-services">
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-shield-alt"></i>
                         <h2 class="encart__title-box"> Service 1</h2>
@@ -77,7 +77,7 @@
                         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                         unknown printer took a galley of type and scrambled it to make a type specimen book. It has
                         survived not only five centuries, but also the leap into electronic typesetting, remaining
-                        essentially unchanged.  </div>
+                        essentially unchanged. </div>
                 </div>
             </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="footer footer--background">
             <div class="footer__container-box">
                 <div class="footer__box">
-                    <h4 class="footer__title footer__title-style">Vault Tec</h4>
+                    <h4 class="footer__title footer__title--adress">Vault Tec</h4>
 
                     <p> 17 rue Coustou <br>
                         59000 Lille<br>
@@ -99,11 +99,13 @@
                         <li> 06.06.06.06.06 </li>
                         <li> contact@vaulttec.fr</li>
                     </ul>
-                    <button type="button" class="btn btn-light btn-lg">Contactez-nous</button>
+                    <button type="button" class="form-btn footer__btn">Contactez-nous</button>
                 </div>
 
                 <div class="footer__box">
-                    <a><i class="fab fa-linkedin rs--light"></i></a>
+                    <h4 class="footer__title footer__title--socialmedia"> Retrouvez nous sur Linkedin </h4>
+
+                    <div class="background-rs"><a href="#"><i class="fab fa-linkedin rs--light"></i></a></div>
                 </div>
             </div>
         </div>
