--- a/html/About.html
+++ b/html/About.html
@@ -46,9 +46,21 @@
                 <div class="head">
                     <p class="head__title"> A PROPOS </p>
                 </div>
-                
-            </div>
 
+                <div class="box-about">
+                    <div class="box-about__title"> Qui sommes nous ? </div>
+                </div>
+                <div class="box-about">
+                    <div class="box-about__title"> Notre mission </div>
+                </div>
+                <div class="box-about">
+                    <div class="box-about__title"> Nos solutions </div>
+                </div>
+                <div class="box-about">
+                    <div class="box-about__title"> Nos valeurs </div>
+                </div>
+                <button type="button" class="form-btn about__btn">Contactez-nous</button>
+            </div>
             </div>
         </section>
     </main>
