--- a/html/Home.html
+++ b/html/Home.html
@@ -43,22 +43,29 @@
     <main>
         <img src="/assets/images/site/pexels-photo-461077.jpeg" class="img" alt="...">
         <section>
-            <div class="section section--background-grey">
+            <div class="section section--background-blue">
                 <p class="section__title"> Nos Services </p>
                 <div class="container section__container-box">
                     <div class="encart__service-box">
-
                         <i class="encart__icon-service-box fas fa-shield-alt"></i>
-                        <h2 class="encart__title-box">Service 1</h2>
-
+                        <h2 class="encart__title-box"> CyberSécurité </h2>
+                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. </div>
+                        <a class="encart__link-box" href="#"> En savoir plus </a>
                     </div>
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-cogs"></i>
-                        <h2 class="encart__title-box">Services 2</h2>
+                        <h2 class="encart__title-box"> Réseaux </h2>
+                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. </div>
+                        <a class="encart__link-box" href="#"> En savoir plus </a>
                     </div>
                     <div class="encart__service-box">
                         <i class="encart__icon-service-box fas fa-fingerprint"></i>
-                        <h2 class="encart__title-box"> Services 3 </h2>
+                        <h2 class="encart__title-box"> IAM </h2>
+                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. </div>
+                        <a class="encart__link-box" href="#"> En savoir plus </a>
                     </div>
                 </div>
             </div>
@@ -68,11 +75,26 @@
                 <p class="section__title section__title--dark "> Ils nous font confiance</p>
             </div>
             <div class="section__partner">
-                <img class="section__logoPartner" src="/assets/images/site/adeo.jpg" alt="logoAdeo">
-                <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
-                <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
+                <div class="testTemoignage">
+                    <img class="section__logoPartner" src="/assets/images/site/adeo.jpg" alt="logoAdeo">
+                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry."</span>
+                </div>
+                <div class="testTemoignage">
+                    <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
+                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry."</span>
+                </div>
+                <div class="testTemoignage">
+                    <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
+                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry."</span>
+                </div>
             </div>
-            <div class="btn-temoignage"><a href="#"> Retrouvez les témoignages de nos partenaires</a></div>
+            <!-- <div class="btn-temoignage"><a href="#"> Retrouvez les témoignages de nos partenaires</a></div> -->
         </section>
     </main>
     <footer>
@@ -91,13 +113,13 @@
                         <li> 06.06.06.06.06 </li>
                         <li> contact@vaulttec.fr</li>
                     </ul>
-                    <button type="button" class="form-btn footer__btn">Contactez-nous</button>
+                    <button type="button" onclick="window.location.href='Contact.html'"
+                        class="form-btn footer__btn">Contactez-nous</button>
                 </div>
 
                 <div class="footer__box">
-                    <h4 class="footer__title footer__title--socialmedia"> Retrouvez nous sur Linkedin </h4>
-
-                    <div class="background-rs"><a href="#"><i class="fab fa-linkedin rs--light"></i></a></div>
+                    <div class="background-rs"><a href="https://fr.linkedin.com/company/vault-tec"><i
+                                class="fab fa-linkedin rs--light"></i></a></div>
                 </div>
             </div>
         </div>
