--- a/html/About.html
+++ b/html/About.html
@@ -46,21 +46,82 @@
                 <div class="head">
                     <p class="head__title"> A PROPOS </p>
                 </div>
-
+            </div>
+            <div class="line"></div>
+            <div class="container-box">
                 <div class="box-about">
                     <div class="box-about__title"> Qui sommes nous ? </div>
+                    <div class="box-about__description">
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                            Ipsum
+                            has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown
+                            printer
+                            took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not
+                            only
+                            five
+                            centuries, but also the leap into electronic typesetting, remaining essentially
+                            unchanged.
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                            Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker
+                            including
+                            versions of Lorem Ipsum.</p>
+                    </div>
                 </div>
-                <div class="box-about">
+                <div class="box-about box-about__right">
                     <div class="box-about__title"> Notre mission </div>
+                    <div class="box-about__description">
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                            Ipsum
+                            has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown
+                            printer
+                            took a
+                            galley of type and scrambled it to make a type specimen book. It has survived not
+                            only
+                            five
+                            centuries, but also the leap into electronic typesetting, remaining essentially
+                            unchanged.
+                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                            Ipsum
+                            passages, and more recently with desktop publishing software like Aldus PageMaker
+                            including
+                            versions of Lorem Ipsum.</p>
+                    </div>
                 </div>
                 <div class="box-about">
                     <div class="box-about__title"> Nos solutions </div>
+                    <div class="box-about__description">
+                        <ul>
+                            <li> <i class="fas fa-check"></i> Ca  </li>
+                            <li> <i class="fas fa-check"></i> Et puis ça  </li>
+                            <li> <i class="fas fa-check"></i> y'a ça aussi </li>
+                            <li> <i class="fas fa-check"></i> oh ca aussi on fait </li>
+                    </div>
                 </div>
-                <div class="box-about">
+                <div class="box-about box-about__right">
                     <div class="box-about__title"> Nos valeurs </div>
+                    <div class="box-about__description">
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                            Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, when an unknown
+                            printer took a
+                            galley of type and scrambled it to make a type specimen book. It has survived
+                            not
+                            only five
+                            centuries, but also the leap into electronic typesetting, remaining essentially
+                            unchanged.
+                            It was popularised in the 1960s with the release of Letraset sheets containing
+                            Lorem
+                            Ipsum
+                            passages, and more recently with desktop publishing software like Aldus
+                            PageMaker
+                            including
+                            versions of Lorem Ipsum.</p>
+                    </div>
                 </div>
-                <button type="button" class="form-btn about__btn">Contactez-nous</button>
-            </div>
             </div>
         </section>
     </main>
