--- a/html/Home.html
+++ b/html/Home.html
@@ -22,13 +22,9 @@
 
 <body>
     <header>
+        <img src="/assets/images/site/LogoVaultTecDarkColor.png" class="logo">
+        <img src="/assets/images/site/text-back2.png" class="background-img">
         <nav class="navbar navbar-expand-lg light">
-            <div class="navbar__left-container">
-                <div class="navbar__left-info">
-                    <img id="logo-vault-tec" src="/assets/images/site/LogoVaultTecDarkColor.png" alt="logoDuSite">
-                    <p id="slogan"> L'expertise en gestion des accès et des identités. </p>
-                </div>
-            </div>
             <div class="navbar__right-container">
                 <div class="navbar__navbar-nav">
                     <a class="navbar__nav-link " href="Home.html"> HOME </a>
@@ -39,62 +35,91 @@
                 </div>
             </div>
         </nav>
+        <div class="presentation">
+            <h1 class="presentation__title ">Vault Tec</h1>
+            <p>L'expertise en gestion des accès et des identités. </p>
+        </div>
     </header>
     <main>
-        <img src="/assets/images/site/pexels-photo-461077.jpeg" class="img" alt="...">
         <section>
-            <div class="section section--background-blue">
-                <p class="section__title"> Nos Services </p>
-                <div class="container section__container-box">
-                    <div class="encart__service-box">
-                        <i class="encart__icon-service-box fas fa-shield-alt"></i>
-                        <h2 class="encart__title-box"> CyberSécurité </h2>
-                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry. </div>
-                        <a class="encart__link-box" href="#"> En savoir plus </a>
-                    </div>
-                    <div class="encart__service-box">
-                        <i class="encart__icon-service-box fas fa-cogs"></i>
-                        <h2 class="encart__title-box"> Réseaux </h2>
-                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry. </div>
-                        <a class="encart__link-box" href="#"> En savoir plus </a>
-                    </div>
-                    <div class="encart__service-box">
-                        <i class="encart__icon-service-box fas fa-fingerprint"></i>
-                        <h2 class="encart__title-box"> IAM </h2>
-                        <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry. </div>
-                        <a class="encart__link-box" href="#"> En savoir plus </a>
+            <div class="section section--background-white">
+                <p class="section__title section__title--dark "> Ils nous font confiance</p>
+            </div>
+            <div class="section__partner">
+                <img class="section__logoPartner" src="/assets/images/site/adeo.jpg" alt="logoAdeo">
+
+                <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
+
+                <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
+
+            </div>
+        </section>
+        <section>
+            <div class="section">
+                <img src="/assets/images/site/Sans titre-1.png" class="img-section-about-us">
+                <div class="section-content">
+                    <h1 class="section__title section__title--dark"> A propos de nous </h1>
+                    <div class="section__description">
+                        <p> Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry.</p>
+                        <div class="section__btn">
+                            <div class="btn-temoignage"><a href="#"> En savoir plus </a></div>
+                            <div class="btn-temoignage"><a href="#"> Notre team </a></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section>
+            <p class="section__title section__title--dark"> Nos Services </p>
+            <div class="container section__container-box">
+                <div class="encart__service-box">
+                    <i class="encart__icon-service-box fas fa-shield-alt"></i>
+                    <h2 class="encart__title-box"> CyberSécurité </h2>
+                    <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. </div>
+                    <a class="encart__link-box" href="#"><i class="icon-plus fas fa-arrow-right"></i> </a>
+                </div>
+                <div class="encart__service-box">
+                    <i class="encart__icon-service-box fas fa-cogs"></i>
+                    <h2 class="encart__title-box"> Réseaux </h2>
+                    <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. </div>
+                    <a class="encart__link-box" href="#"> <i class="icon-plus fas fa-arrow-right"></i></a>
+                </div>
+                <div class="encart__service-box">
+                    <i class="encart__icon-service-box fas fa-fingerprint"></i>
+                    <h2 class="encart__title-box"> IAM </h2>
+                    <div class="encart__description-box">Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. </div>
+                    <a class="encart__link-box" href="#"><i class="icon-plus fas fa-arrow-right"></i> </a>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section>
             <div class=" section section--background-white">
-                <p class="section__title section__title--dark "> Ils nous font confiance</p>
+                <p class="section__title section__title--dark "> Témoignages de nos client </p>
             </div>
-            <div class="section__partner">
+            <div class="section__partner-temoignage">
                 <div class="testTemoignage">
-                    <img class="section__logoPartner" src="/assets/images/site/adeo.jpg" alt="logoAdeo">
-                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry."</span>
+                    <span class="testParolePartenaire"> " Trop fort Vault Tec ................................................................ " </span>
+                    <div class="qui"> <img src="/assets/images/site/Monsieurpatate.png" class="futur-photo"> Mr Patate, <i><br> CEO du genre </i>
+                    </div>
                 </div>
                 <div class="testTemoignage">
-                    <img class="section__logoPartner" src="/assets/images/site/logo_giphar.png" alt="logoGiphar">
-                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry."</span>
+                    <span class="testParolePartenaire"> " Vive la Philipocracie ................................................................"</span>
+                    <div class="qui"> <img src="/assets/images/site/Monsieurpatate.png" class="futur-photo"> Mr Patate, <i> CEO du genre </i>
+                    </div>
                 </div>
                 <div class="testTemoignage">
-                    <img class="section__logoPartner" src="/assets/images/site/cognitum.JPG" alt="logoCognitum">
-                    <span class="testParolePartenaire"> " Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry."</span>
+                    <span class="testParolePartenaire"> " Membre de l'équipe au top, sauf un je dirai pas qui.....................................................
+                        "</span>
+                    <div class="qui"> <img src="/assets/images/site/Monsieurpatate.png" class="futur-photo"> Mr Patate, <i> CEO du genre </i>
+                    </div>
                 </div>
             </div>
-            <!-- <div class="btn-temoignage"><a href="#"> Retrouvez les témoignages de nos partenaires</a></div> -->
         </section>
     </main>
     <footer>
